--- a/src/omscs/edtech/ui/views/Grade Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Grade Assignments.fxml
@@ -59,7 +59,7 @@
                   </Tab>
               </tabs>
             </TabPane>
-            <TextArea prefHeight="145.0" prefWidth="305.0" fx:id="txtFeedback" />
+            <TextArea prefHeight="145.0" prefWidth="305.0" fx:id="txtFeedback" promptText="Enter assignment feedback here..." />
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
                 <Button mnemonicParsing="false" text="Send Feedback" onAction="#sendFeedback_Click" />
