--- a/src/omscs/edtech/ui/views/Add Classes.fxml
+++ b/src/omscs/edtech/ui/views/Add Classes.fxml
@@ -53,6 +53,7 @@
                   <Insets bottom="5.0" right="5.0" top="5.0" />
                </padding>
             </GridPane>
+             <VBox fx:id="emptyBox"></VBox>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
                 <Button mnemonicParsing="false" text="Save Class" onAction="#saveClass_Click" />
