--- a/src/omscs/edtech/ui/views/Create Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Create Assignments.fxml
@@ -25,7 +25,7 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </HBox>
-      <VBox prefHeight="205.0" prefWidth="600.0">
+      <VBox prefHeight="205.0" prefWidth="600.0" fx:id="classesBox">
          <children>
             <Label text="Classes doing the Assignment:">
             </Label>
@@ -46,7 +46,7 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </HBox>
-      <VBox prefHeight="200.0" prefWidth="100.0">
+      <VBox prefHeight="200.0" prefWidth="100.0" fx:id="descriptionBox">
          <children>
             <Label text="Description:">
             </Label>
