--- a/src/omscs/edtech/ui/views/Grade Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Grade Assignments.fxml
@@ -33,17 +33,19 @@
       </VBox>
       <VBox fx:id="rightBox" prefHeight="400.0" prefWidth="314.0">
          <children>
-            <Label text="Assignment Description:">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            <Label text="-----" fx:id="lblAssignmentDescription">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            <TabPane prefHeight="235.0" prefWidth="305.0" tabClosingPolicy="UNAVAILABLE">
+             <VBox fx:id="assignmentDescrBox" prefHeight="100">
+                <Label text="Assignment Description:">
+                   <VBox.margin>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                   </VBox.margin>
+                </Label>
+                <Label text="-----" fx:id="lblAssignmentDescription">
+                   <VBox.margin>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                   </VBox.margin>
+                </Label>
+             </VBox>
+            <TabPane prefHeight="235.0" prefWidth="305.0" tabClosingPolicy="UNAVAILABLE" fx:id="paneAssignment">
               <tabs>
                 <Tab text="Assignment Text">
                      <content>
