--- a/src/omscs/edtech/ui/views/Grade Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Grade Assignments.fxml
@@ -34,14 +34,9 @@
       <VBox fx:id="rightBox" prefHeight="400.0" prefWidth="314.0">
          <children>
              <VBox fx:id="assignmentDescrBox" prefHeight="100">
-                <Label text="Assignment Description:">
-                   <VBox.margin>
-                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                   </VBox.margin>
-                </Label>
                 <Label text="-----" fx:id="lblAssignmentDescription">
                    <VBox.margin>
-                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                      <Insets top="5.0" bottom="5.0" left="5.0" right="5.0" />
                    </VBox.margin>
                 </Label>
              </VBox>
