Settings e-mail templates work. Need to add custom controls, if any are needed.

--- a/src/omscs/edtech/ui/views/EMail Editor.fxml
+++ b/src/omscs/edtech/ui/views/EMail Editor.fxml
@@ -12,7 +12,7 @@
       <HTMLEditor fx:id="htmlEditorBox" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" />
       <ToolBar prefHeight="40.0" >
         <items>
-          <Button mnemonicParsing="false" text="Save Changes" />
+          <Button mnemonicParsing="false" text="Save Changes" onAction="#saveTemplate_Click" />
         </items>
       </ToolBar>
    </children>
