--- a/src/omscs/edtech/ui/views/Grade Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Grade Assignments.fxml
@@ -21,6 +21,7 @@
               <columns>
                 <TableColumn prefWidth="136.0" text="Student Name" fx:id="colStudentName" />
                 <TableColumn prefWidth="75.0" text="Grade" fx:id="colAssignmentGrade" />
+                <TableColumn text="Missing" fx:id="colMissingAssignments" />
               </columns>
             </TableView>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
